--- a/project.config.json
+++ b/project.config.json
@@ -50,9 +50,9 @@
 			"list": [
 				{
 					"id": 0,
-					"name": "pages/goods_list/index",
-					"pathName": "pages/goods_list/index",
-          "query":"keyword=电视",
+					"name": "pages/search/index",
+					"pathName": "pages/search/index",
+					"query": "keyword=电视",
 					"scene": null
 				}
 			]
